fix: visible color for label selection

--- a/src/components/tools_menu/annotation_menu/label_table/LabelTable.css
+++ b/src/components/tools_menu/annotation_menu/label_table/LabelTable.css
@@ -21,6 +21,6 @@
 }
 
 .label-table-active ion-label {
-    color: white;
+    color: #0054e6;
     font-weight: 600;
 }
